@@ -1,7 +1,9 @@
 package com.chirag.apichaos.config;
 
+import java.util.Arrays;
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -11,15 +13,21 @@ import org.springframework.web.filter.CorsFilter;
 @Configuration
 public class CorsConfig {
 
+    /**
+     * Comma-separated list of allowed origins.
+     * Default covers local dev; override via ALLOWED_ORIGINS env var in production.
+     * Example: ALLOWED_ORIGINS=https://apichaos.vercel.app,https://your-domain.com
+     */
+    @Value("${allowed.origins:http://localhost:3000,http://localhost:5173}")
+    private String allowedOrigins;
+
     @Bean
     public CorsFilter corsFilter() {
 
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://localhost:5173"
-        ));
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
 
         config.setAllowedMethods(List.of(
                 "GET",
